Update z-index of fixed-position header.

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -13,6 +13,7 @@ html,body {
     padding: 0px 0;
     border-bottom: 1px solid #eee;
     position: fixed;
+    z-index: 100;
     right: 0;
     left: 0;
 }
